# netra

./: .gitignore  CMakeLists.txt  guard.sh  imgui.ini  package-lock.json
.github/: copilot-instructions.md
.github/instructions/: code.instructions.md  prohibit.instructions.md
app/: CMakeLists.txt
app/include/: gate_editor.hpp  select_mode.hpp
app/src/: gate_editor.cpp  main.cpp  select_mode.cpp
build_tests/: DartConfiguration.tcl  Makefile
build_tests/app/: Makefile
build_tests/common/: Makefile
build_tests/engine/: Makefile
build_tests/graphics/: Makefile
build_tests/tests/: Makefile  netra_tests
common/: CMakeLists.txt
common/include/: constraints.hpp  gates.hpp  grid_coord.hpp  types.hpp
engine/: CMakeLists.txt
engine/include/: editor_state.hpp
engine/include/components/: components.hpp  render_components.hpp
engine/include/core/: astar.hpp  component_storage.hpp  entity.hpp  world.hpp
engine/include/graphics/: camera2d.hpp  renderer.hpp  wire.hpp
engine/include/systems/: layout_system.hpp  render_system.hpp  simulation.hpp
engine/src/components/: components.cpp  render_components.cpp
engine/src/core/: astar.cpp  entity.cpp
engine/src/graphics/: camera2d.cpp  grid.cpp  imgui_layer.cpp  renderer.cpp  shader.cpp  window.cpp  wire.cpp
engine/src/systems/: layout_system.cpp  render_system.cpp  simulation.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
graphics/: CMakeLists.txt
graphics/include/: grid.hpp  imgui_layer.hpp  renderer.hpp  shader.hpp  window.hpp
graphics/src/: grid.cpp  imgui_layer.cpp  renderer.cpp  shader.cpp  window.cpp
shaders/logic_gates/: and.frag  gates.vert  nand.frag  nor.frag  not.frag  or.frag  xnor.frag  xor.frag
tests/: CMakeLists.txt
tests/src/: test_bitvalue.cpp  test_ecs.cpp  test_framework.hpp  test_simulation.cpp
